@startuml
hide circle
skinparam classAttributeIconSize 0
skinparam classFontStyle bold
skinparam classBackgroundColor #E3F2FD
skinparam classArrowColor #1565C0
skinparam noteBackgroundColor #FFF9C4
skinparam noteBorderColor #FBC02D
skinparam ArrowFontSize 18

abstract class Command <<abstract>>{
  + {abstract} execute(...) : void
}

class AddExpenseCommand {
  + execute(...) : void
}

class Summary {
  - totalIncome : double
  - totalExpense : double
  - totalSavings : double
  - observers : List<FinancialObserver>
  + addIncome(double)
  + addExpense(double)
  + addSavings(double)
  + getAvailableFunds() : double
  + registerObserver(FinancialObserver)
  + removeObserver(FinancialObserver)
  - notifyObservers()
}

interface FinancialObserver <<interface>> {
  + update(...) : void
}

class FundsAlert {
  - warningThreshold : double
  + update(...) : void
  + setWarningThreshold(double) : boolean
}

class SummaryDisplay {
  + displaySummary() : String
}


' --- Relationships ---
AddExpenseCommand --|> Command

Summary o--> "0..*" FinancialObserver : notifies >
FundsAlert ..|> FinancialObserver

SummaryDisplay ..> Summary : uses >
AddExpenseCommand ..> Summary : modifies >


' --- Notes ---
note top of Summary : **Central Financial Data Hub**\n• Stores financial data.\n• Manages observer notifications.

note top of FundsAlert : **Runtime Setup:**\nFundsAlert is initialized upon program startup.\nObserves the Summary class by implementing the\nFinancial Observer interface.

note left of FinancialObserver : **Observer Pattern**\nSummary aggregates Observers.\nChanges trigger `notifyObservers()`,\nwhich calls `update()` on observers.\n`FundsAlert` implements `update()`.

note top of AddExpenseCommand : **Command Pattern**\n`AddExpenseCommand` is one example\nof various commands inherited from `Command`.\nSpecific commands modify relevant\nobjects (e.g., `Summary`, `FundsAlert`).

@enduml